# tftokenizers

./: .editorconfig  .gitignore  Makefile  README.md  database.json  pyproject.toml  setup.cfg  tox.ini
scripts/: download_tokenizers.sh
tests/: test_all_bert_models.py  test_all_bert_tokenizers.py  test_convert_bert_tokenizer.py  test_convert_bert_tokenizer_base.py  test_load_and_parse_files.py  test_template_parsing_post_processor.py  test_tftransformers.py  test_transformer_models.py
tftokenizers/: __init__.py  convert.py  database.py  detect.py  download.py  file.py  main.py  model.py  tokenizer.py  types.py  utils.py
