[tool.poetry]
name = "tftokenizers"
version = "0.1.6"
description = "Use Huggingface Transformer and Tokenizers as Tensorflow Reusable SavedModels."
authors = ["MarkusSagen <markus.john.sagen@gmail.com>"]
license = "Apache License 2.0"
repository = 'https://github.com/Hugging-Face-Supporter/tftokenizers'
readme = 'README.md'
keywords = ['huggingface', 'transformers', 'tokenizers', 'tensorflow', 'text']

[tool.poetry.dependencies]
python = "^3.8"
sentencepiece = "^0.1.94"
tensorflow = "^2.5.0"
tensorflow-text = "^2.5.0"
tf-sentencepiece = "^0.1.92"
transformers = "^4.10.0"
torch = "^1.8.0"
rich = { extras = ["jupyter"], version = "^10.14.0" }
pydantic = "^1.8.0"

[tool.poetry.dev-dependencies]
pytest = "6.2.5"
pytest-cov = "3.0.0"
isort = "5.10.1"
flake8 = "4.0.1"
black = "20.8b1"
mypy = "0.910"
tox = "3.24.4"
tomlkit = "0.7.2"
pylint = "2.9.0"
autopep8 = "^1.6.0"
python-lsp-server = "^1.4.0"
pyright = "^1.1.229"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# setup = "tftokenizers.poetry.utils:setup"
